@@ -326,6 +326,19 @@ name|solr
 operator|.
 name|core
 operator|.
+name|DirectoryFactory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
 name|HdfsDirectoryFactory
 import|;
 end_import
@@ -889,7 +902,9 @@ name|setProperty
 argument_list|(
 literal|"solr.lock.type"
 argument_list|,
-literal|"hdfs"
+name|DirectoryFactory
+operator|.
+name|LOCK_TYPE_HDFS
 argument_list|)
 expr_stmt|;
 name|System
