@@ -259,6 +259,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|core
+operator|.
+name|DirectoryFactory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|HdfsUtil
@@ -604,7 +617,9 @@ name|setProperty
 argument_list|(
 literal|"solr.lock.type"
 argument_list|,
-literal|"hdfs"
+name|DirectoryFactory
+operator|.
+name|LOCK_TYPE_HDFS
 argument_list|)
 expr_stmt|;
 name|System
